infrastructure/tutor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tutor-demo-origin
  namespace: tutor
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tutor-demo-origin
  namespace: tutor
subsets:
  - addresses:
      - ip: 192.168.1.20
    ports:
      - name: http
        port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tutor-demo-web
  namespace: tutor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tutor.rupan.dev`)
      kind: Rule
      services:
        - name: tutor-demo-origin
          port: 80
  tls:
    secretName: tutor-rupan-tls
